// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Divider /> should render Divider using height 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    data-blade-component="box"
    display="flex"
    height="100px"
    style={
      [
        {},
      ]
    }
  >
    <View
      borderLeftColor="surface.border.normal.lowContrast"
      borderPosition="borderLeft"
      borderWidth="none"
      data-blade-component="divider"
      dividerStyle="solid"
      height="100%"
      isDividerHorizontal={false}
      style={
        [
          {},
          {},
        ]
      }
      thickness="thin"
    />
  </View>
</View>
`;

exports[`<Divider /> should render Divider within flex container 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    data-blade-component="box"
    display="flex"
    style={
      [
        {},
      ]
    }
  >
    <View
      borderBottomColor="surface.border.normal.lowContrast"
      borderPosition="borderBottom"
      borderWidth="none"
      data-blade-component="divider"
      dividerStyle="solid"
      isDividerHorizontal={true}
      style={
        [
          {},
          {},
        ]
      }
      thickness="thin"
    />
  </View>
</View>
`;
